--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="row checkboxes">
                 <div class="column ratio">
-                    <input type="checkbox" id="ratio">
+                    <input type="checkbox" id="ratio" checked>
                     <label for="ratio">Lock aspect ratio</label>
                 </div>
                 <div class="column quality">
