--- a/index1.html
+++ b/index1.html
@@ -32,6 +32,41 @@
             </div>
             <input type="submit" class="btn" value="Sign Up" name="singUp">
             </form>
+            <p class="or">
+                ----------or----------
+            </p>
+            <div class="links">
+                <p>Already Have Account ?</p>
+                <button id="signInButton">sign In</button>
+            </div>
+        </div>
+
+        <div class="container" id="signIn">
+            <h1 class="form-title">Sign In</h1>
+            <form method="post" action="">
+                
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="email" id="email" placeholder="email" required>
+                    <label for="email">email</label>
+                </div>
+                <div class="input-group"></div>
+                <i class="fas fa-lock"></i>
+                <input type="password" id="password" placeholder="password" required>
+                <label for="password">password</label>
+            </div>
+            <p class="recover">
+                <a href="#">Recover pass</a>
+            </p>
+            <input type="submit" class="btn" value="Sign In" name="singIn">
+            </form>
+            <p class="or">
+                ----------or----------
+            </p>
+            <div class="links">
+                <p>Don't have account yet?</p>
+                <button id="signUpButton">sign Up</button>
+            </div>
         </div>
     </body>
 </html>
