--- a/index1.html
+++ b/index1.html
@@ -30,7 +30,7 @@
         .form-title {
             margin-bottom: 20px;
             font-size: 24px;
-            color: #333;
+            color: #000000;
         }
         .input-group {
             position: relative;
@@ -45,7 +45,7 @@
         .input-group input {
             width: 100%;
             padding: 10px 10px 10px 30px;
-            border: 1px solid #ddd;
+            border: 1px solid #00a6ff;
             border-radius: 5px;
             font-size: 14px;
         }
@@ -53,7 +53,7 @@
             display: none;
         }
         .btn {
-            background: #28a745;
+            background: #000c03;
             color: #fff;
             border: none;
             padding: 10px 20px;
@@ -62,7 +62,7 @@
             font-size: 16px;
         }
         .btn:hover {
-            background: #218838;
+            background: #00a2ff;
         }
         .or {
             margin: 20px 0;
