--- a/index1.html
+++ b/index1.html
@@ -1,154 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register & Login</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f7f6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .container {
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            width: 400px;
-            padding: 20px;
-            text-align: center;
-            display: none;
-        }
-        .container.active {
-            display: block;
-        }
-        .form-title {
-            margin-bottom: 20px;
-            font-size: 24px;
-            color: #000000;
-        }
-        .input-group {
-            position: relative;
-            margin-bottom: 15px;
-        }
-        .input-group i {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            color: #aaa;
-        }
-        .input-group input {
-            width: 100%;
-            padding: 10px 10px 10px 30px;
-            border: 1px solid #00a6ff;
-            border-radius: 5px;
-            font-size: 14px;
-        }
-        .input-group label {
-            display: none;
-        }
-        .btn {
-            background: #000c03;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .btn:hover {
-            background: #00a2ff;
-        }
-        .or {
-            margin: 20px 0;
-            color: #999;
-        }
-        .links {
-            color: #007bff;
-        }
-        .links button {
-            background: none;
-            border: none;
-            color: #007bff;
-            cursor: pointer;
-            text-decoration: underline;
-        }
-        .recover a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        .recover a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <div class="container active" id="signup">
-        <h1 class="form-title">Register</h1>
-        <form method="post" action="">
-            <div class="input-group">
-                <i class="fas fa-user"></i>
-                <input type="text" name="fName" id="fName" placeholder="First Name" required>
-            </div>
-            <div class="input-group">
-                <i class="fas fa-user"></i>
-                <input type="text" name="lName" id="lName" placeholder="Last Name" required>
-            </div>
-            <div class="input-group">
-                <i class="fas fa-envelope"></i>
-                <input type="email" name="email" id="email" placeholder="Email" required>
-            </div>
-            <div class="input-group">
+<html lag="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width">
+        <title>Register & Login</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    </head>
+    <body>
+        <div class="container" id="signup">
+            <h1 class="form-title">Register</h1>
+            <form method="post" action="">
+                <div class="input-group">
+                    <i class="fas fa-user"></i>
+                    <input type="text" name="fName" id="fName" placeholder="First Name" required>
+                    <label for="fname">first Name</label>
+                </div>
+                <div class="input-group">
+                    <i class="fas fa-user"></i>
+                    <input type="text" name="lName" id="lName" placeholder="Las Name" required>
+                    <label for="lName">Last Name</label>
+                </div>
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="email" id="email" placeholder="email" required>
+                    <label for="email">email</label>
+                </div>
+                <div class="input-group"></div>
                 <i class="fas fa-lock"></i>
-                <input type="password" id="password" placeholder="Password" required>
+                <input type="password" id="password" placeholder="password" required>
+                <label for="password">password</label>
             </div>
-            <input type="submit" class="btn" value="Sign Up" name="signUp">
-        </form>
-        <p class="or">---------- or ----------</p>
-        <div class="links">
-            <p>Already Have an Account?</p>
-            <button id="signInButton">Sign In</button>
+            <input type="submit" class="btn" value="Sign Up" name="singUp">
+            </form>
+            <p class="or">
+                ----------or----------
+            </p>
+            <div class="links">
+                <p>Already Have Account ?</p>
+                <button id="signInButton">sign In</button>
+            </div>
         </div>
-    </div>
 
-    <div class="container" id="signIn">
-        <h1 class="form-title">Sign In</h1>
-        <form method="post" action="">
-            <div class="input-group">
-                <i class="fas fa-envelope"></i>
-                <input type="email" name="email" id="email" placeholder="Email" required>
-            </div>
-            <div class="input-group">
+        <div class="container" id="signIn">
+            <h1 class="form-title">Sign In</h1>
+            <form method="post" action="">
+                
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="email" id="email" placeholder="email" required>
+                    <label for="email">email</label>
+                </div>
+                <div class="input-group"></div>
                 <i class="fas fa-lock"></i>
-                <input type="password" id="password" placeholder="Password" required>
+                <input type="password" id="password" placeholder="password" required>
+                <label for="password">password</label>
             </div>
             <p class="recover">
-                <a href="#">Recover Password</a>
+                <a href="#">Recover pass</a>
             </p>
-            <input type="submit" class="btn" value="Sign In" name="signIn">
-        </form>
-        <p class="or">---------- or ----------</p>
-        <div class="links">
-            <p>Don't have an account yet?</p>
-            <button id="signUpButton">Sign Up</button>
+            <input type="submit" class="btn" value="Sign In" name="singIn">
+            </form>
+            <p class="or">
+                ----------or----------
+            </p>
+            <div class="links">
+                <p>Don't have account yet?</p>
+                <button id="signUpButton">sign Up</button>
+            </div>
         </div>
-    </div>
-
-    <script>
-        document.getElementById('signInButton').addEventListener('click', function() {
-            document.getElementById('signup').classList.remove('active');
-            document.getElementById('signIn').classList.add('active');
-        });
-
-        document.getElementById('signUpButton').addEventListener('click', function() {
-            document.getElementById('signIn').classList.remove('active');
-            document.getElementById('signup').classList.add('active');
-        });
-    </script>
-</body>
+    </body>
 </html>
